--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-router-dom": "^6.26.1",
+    "socket.io-client": "^4.7.5",
     "tailwindcss": "^3.4.10",
     "zod": "^3.23.8"
   },
