--- a/web/package.json
+++ b/web/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^6.26.1",
     "socket.io-client": "^4.7.5",
     "tailwindcss": "^3.4.10",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
