--- a/web/package.json
+++ b/web/package.json
@@ -15,10 +15,12 @@
     "@tanstack/react-query": "^5.52.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.5",
+    "leaflet": "^1.9.4",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.1",
     "socket.io-client": "^4.7.5",
     "tailwindcss": "^3.4.10",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/leaflet": "^1.9.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
