--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.26.1",
     "socket.io-client": "^4.7.5",
     "tailwindcss": "^3.4.10",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
@@ -44,6 +45,7 @@
     "@types/leaflet": "^1.9.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-v8": "^2.0.5",
     "babel-jest": "^29.7.0",
