--- a/web/package.json
+++ b/web/package.json
@@ -63,7 +63,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.9",
-    "msw": "2.1.7",
+    "msw": "^2.3.5",
     "prettier": "^3.3.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
